# coursework

./: .gitignore  readme.md
src/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h
src/db/: script.sql
src/resources/: resourses.qrc  script.sql
